--- a/electric.html
+++ b/electric.html
@@ -192,28 +192,180 @@
   </a>
 </header>
   <main>
-    <section class="store-section" data-category="bulbs">
-      <h2>Bulbs</h2>
-      <div class="product-grid">
-        <div class="product" data-name="LED Bulb">
-          <img src="https://via.placeholder.com/100" alt="LED Bulb">
-          <div class="product-details">
-            <div>LED Bulb</div>
-            <div class="price">₦1,500</div>
-          </div>
-          <button class="add-to-cart" onclick="addToCart(this, 'LED Bulb', 'https://via.placeholder.com/100', 1500)">Add to Cart</button>
-        </div>
-        <div class="product" data-name="Halogen Bulb">
-          <img src="https://via.placeholder.com/100" alt="Halogen Bulb">
-          <div class="product-details">
-            <div>Halogen Bulb</div>
-            <div class="price">₦2,000</div>
-          </div>
-          <button class="add-to-cart" onclick="addToCart(this, 'Halogen Bulb', 'https://via.placeholder.com/100', 2000)">Add to Cart</button>
-        </div>
-        <!-- Add more products as needed -->
-      </div>
-    </section>
+    <section class="store-section" data-category="bulbs-lighting">
+  <h2>Bulbs & Lighting</h2>
+  <div class="product-grid">
+
+    <div class="product" data-name="18W AKT bulb">
+      <img src="https://via.placeholder.com/100" alt="18W AKT bulb">
+      <div class="product-details"><div>18W AKT bulb</div><div class="price">₦1,200</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '18W AKT bulb', 'https://via.placeholder.com/100', 1200)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="10W AKT bulb">
+      <img src="https://via.placeholder.com/100" alt="10W AKT bulb">
+      <div class="product-details"><div>10W AKT bulb</div><div class="price">₦900</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '10W AKT bulb', 'https://via.placeholder.com/100', 900)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="5W AKT bulb">
+      <img src="https://via.placeholder.com/100" alt="5W AKT bulb">
+      <div class="product-details"><div>5W AKT bulb</div><div class="price">₦700</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '5W AKT bulb', 'https://via.placeholder.com/100', 700)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="20W AKT bulb">
+      <img src="https://via.placeholder.com/100" alt="20W AKT bulb">
+      <div class="product-details"><div>20W AKT bulb</div><div class="price">₦1,300</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '20W AKT bulb', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="24W AKT outlight">
+      <img src="https://via.placeholder.com/100" alt="24W AKT outlight">
+      <div class="product-details"><div>24W AKT outlight</div><div class="price">₦1,500</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '24W AKT outlight', 'https://via.placeholder.com/100', 1500)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="6W AKT pop">
+      <img src="https://via.placeholder.com/100" alt="6W AKT pop">
+      <div class="product-details"><div>6W AKT pop</div><div class="price">₦800</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '6W AKT pop', 'https://via.placeholder.com/100', 800)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="12W pop AKT (pcs)">
+      <img src="https://via.placeholder.com/100" alt="12W pop AKT (pcs)">
+      <div class="product-details"><div>12W pop AKT</div><div class="price">₦1,000</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '12W pop AKT', 'https://via.placeholder.com/100', 1000)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="12W surface AKT">
+      <img src="https://via.placeholder.com/100" alt="12W surface AKT">
+      <div class="product-details"><div>12W surface AKT</div><div class="price">₦1,200</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '12W surface AKT', 'https://via.placeholder.com/100', 1200)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="10W church bulb">
+      <img src="https://via.placeholder.com/100" alt="10W church bulb">
+      <div class="product-details"><div>10W church bulb</div><div class="price">₦950</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '10W church bulb', 'https://via.placeholder.com/100', 950)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="10W colored bulb (rooms)">
+      <img src="https://via.placeholder.com/100" alt="10W colored bulb">
+      <div class="product-details"><div>10W colored bulb</div><div class="price">₦900</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '10W colored bulb', 'https://via.placeholder.com/100', 900)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="5W colored bulb">
+      <img src="https://via.placeholder.com/100" alt="5W colored bulb">
+      <div class="product-details"><div>5W colored bulb</div><div class="price">₦700</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '5W colored bulb', 'https://via.placeholder.com/100', 700)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Doll 40mm bulb">
+      <img src="https://via.placeholder.com/100" alt="Doll 40mm bulb">
+      <div class="product-details"><div>Doll 40mm bulb</div><div class="price">₦850</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, 'Doll 40mm bulb', 'https://via.placeholder.com/100', 850)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="18W Vornax bulb">
+      <img src="https://via.placeholder.com/100" alt="18W Vornax bulb">
+      <div class="product-details"><div>18W Vornax bulb</div><div class="price">₦1,200</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '18W Vornax bulb', 'https://via.placeholder.com/100', 1200)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="30W anti-power bulb">
+      <img src="https://via.placeholder.com/100" alt="30W anti-power bulb">
+      <div class="product-details"><div>30W anti-power bulb</div><div class="price">₦1,800</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '30W anti-power bulb', 'https://via.placeholder.com/100', 1800)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="15W Goofcom bulb">
+      <img src="https://via.placeholder.com/100" alt="15W Goofcom bulb">
+      <div class="product-details"><div>15W Goofcom bulb</div><div class="price">₦1,100</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '15W Goofcom bulb', 'https://via.placeholder.com/100', 1100)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="60W Pals bulb">
+      <img src="https://via.placeholder.com/100" alt="60W Pals bulb">
+      <div class="product-details"><div>60W Pals bulb</div><div class="price">₦1,600</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '60W Pals bulb', 'https://via.placeholder.com/100', 1600)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Digital indicator bulb">
+      <img src="https://via.placeholder.com/100" alt="Digital indicator bulb">
+      <div class="product-details"><div>Digital indicator bulb</div><div class="price">₦1,300</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, 'Digital indicator bulb', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="6W surface AKT">
+      <img src="https://via.placeholder.com/100" alt="6W surface AKT">
+      <div class="product-details"><div>6W surface AKT</div><div class="price">₦850</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '6W surface AKT', 'https://via.placeholder.com/100', 850)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="5W pop AKT">
+      <img src="https://via.placeholder.com/100" alt="5W pop AKT">
+      <div class="product-details"><div>5W pop AKT</div><div class="price">₦750</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '5W pop AKT', 'https://via.placeholder.com/100', 750)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="3W pop AKT">
+      <img src="https://via.placeholder.com/100" alt="3W pop AKT">
+      <div class="product-details"><div>3W pop AKT</div><div class="price">₦700</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '3W pop AKT', 'https://via.placeholder.com/100', 700)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Mundo bulb">
+      <img src="https://via.placeholder.com/100" alt="Mundo bulb">
+      <div class="product-details"><div>Mundo bulb</div><div class="price">₦1,000</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, 'Mundo bulb', 'https://via.placeholder.com/100', 1000)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="12W pop 2-in-1 color">
+      <img src="https://via.placeholder.com/100" alt="12W pop 2-in-1 color">
+      <div class="product-details"><div>12W pop 2-in-1 color</div><div class="price">₦1,300</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '12W pop 2-in-1 color', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="26W SVL bulb">
+      <img src="https://via.placeholder.com/100" alt="26W SVL bulb">
+      <div class="product-details"><div>26W SVL bulb</div><div class="price">₦1,400</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '26W SVL bulb', 'https://via.placeholder.com/100', 1400)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="8W SVL bulb">
+      <img src="https://via.placeholder.com/100" alt="8W SVL bulb">
+      <div class="product-details"><div>8W SVL bulb</div><div class="price">₦850</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '8W SVL bulb', 'https://via.placeholder.com/100', 850)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="5W Ecomm bulb">
+      <img src="https://via.placeholder.com/100" alt="5W Ecomm bulb">
+      <div class="product-details"><div>5W Ecomm bulb</div><div class="price">₦750</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '5W Ecomm bulb', 'https://via.placeholder.com/100', 750)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="9W Aei pop bulb">
+      <img src="https://via.placeholder.com/100" alt="9W Aei pop bulb">
+      <div class="product-details"><div>9W Aei pop bulb</div><div class="price">₦900</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '9W Aei pop bulb', 'https://via.placeholder.com/100', 900)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="12W colored bulbs">
+      <img src="https://via.placeholder.com/100" alt="12W colored bulbs">
+      <div class="product-details"><div>12W colored bulbs</div><div class="price">₦1,100</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '12W colored bulbs', 'https://via.placeholder.com/100', 1100)">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="25W tungsten bulb">
+      <img src="https://via.placeholder.com/100" alt="25W tungsten bulb">
+      <div class="product-details"><div>25W tungsten bulb</div><div class="price">₦1,500</div></div>
+      <button class="add-to-cart" onclick="addToCart(this, '25W tungsten bulb', 'https://via.placeholder.com/100', 1500)">Add to Cart</button>
+    </div>
+
+  </div>
+        </section>
 
     <section class="store-section" data-category="cables">
       <h2>Cables</h2>
