--- a/cart.html
+++ b/cart.html
@@ -74,6 +74,19 @@
       color: #003366;
       margin-bottom: 1rem;
     }
+    @media (max-width: 768px) {
+  .cart-item {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+
+  }
+
+  .quantity-controls {
+    margin-top: 0.5rem;
+  }
+    }
 
     .cart-item {
       background: #fff;
@@ -189,79 +202,67 @@
   <script>
       localStorage.removeItem("orderSubmitted");
     function loadCart() {
-      const cartContainer = document.getElementById('cart-items');
-      const totalDisplay = document.getElementById('cart-total');
-      const checkoutBtn = document.getElementById('checkout-btn');
+  const cartContainer = document.getElementById('cart-items');
+  const totalDisplay = document.getElementById('cart-total');
+  const checkoutBtn = document.getElementById('checkout-btn');
 
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+  let cart = JSON.parse(localStorage.getItem('cart')) || {};
+  const items = Object.values(cart);
 
-      const consolidated = {};
-      cart.forEach(item => {
-        if (consolidated[item.name]) {
-          consolidated[item.name].quantity++;
-        } else {
-          consolidated[item.name] = { ...item, quantity: 1 };
-        }
-      });
+  cartContainer.innerHTML = '';
+  let grandTotal = 0;
 
-      cart = Object.values(consolidated);
-      cartContainer.innerHTML = '';
-      let grandTotal = 0;
+  if (items.length === 0) {
+    cartContainer.innerHTML = '<p class="empty-message">Your cart is empty.</p>';
+    checkoutBtn.style.display = 'none';
+    totalDisplay.style.display = 'none';
+    return;
+  }
 
-      if (cart.length === 0) {
-        cartContainer.innerHTML = '<p class="empty-message">Your cart is empty.</p>';
-        checkoutBtn.style.display = 'none';
-        totalDisplay.style.display = 'none';
-        return;
-      }
+  totalDisplay.style.display = 'block';
+  checkoutBtn.style.display = 'inline-block';
 
-      totalDisplay.style.display = 'block';
-      checkoutBtn.style.display = 'inline-block';
+  items.forEach((item) => {
+    const itemTotal = item.price * item.quantity;
+    grandTotal += itemTotal;
 
-      cart.forEach((item) => {
-        const itemTotal = item.price * item.quantity;
-        grandTotal += itemTotal;
-
-        const itemHTML = `
-          <div class="cart-item">
-            <img src="${item.image}" alt="${item.name}" />
-            <div class="cart-details">
-              <div><strong>${item.name}</strong></div>
-              <div class="price">₦${item.price.toLocaleString()}</div>
-              <div class="quantity-controls">
-                <button onclick="changeQuantity('${item.name}', -1)">-</button>
-                <span>${item.quantity}</span>
-                <button onclick="changeQuantity('${item.name}', 1)">+</button>
-              </div>
-              <div>Subtotal: ₦${itemTotal.toLocaleString()}</div>
-            </div>
-            <button class="remove-btn" onclick="removeItem('${item.name}')">Remove</button>
+    const itemHTML = `
+      <div class="cart-item">
+        <img src="${item.image}" alt="${item.name}" />
+        <div class="cart-details">
+          <div><strong>${item.name}</strong></div>
+          <div class="price">₦${item.price.toLocaleString()}</div>
+          <div class="quantity-controls">
+            <button onclick="changeQuantity('${item.name}', -1)">-</button>
+            <span>${item.quantity}</span>
+            <button onclick="changeQuantity('${item.name}', 1)">+</button>
           </div>
-        `;
-        cartContainer.innerHTML += itemHTML;
-      });
+          <div>Subtotal: ₦${itemTotal.toLocaleString()}</div>
+        </div>
+        <button class="remove-btn" onclick="removeItem('${item.name}')">Remove</button>
+      </div>
+    `;
+    cartContainer.innerHTML += itemHTML;
+  });
 
-      totalDisplay.textContent = 'Total: ₦' + grandTotal.toLocaleString();
-    }
+  totalDisplay.textContent = 'Total: ₦' + grandTotal.toLocaleString();
+}
 
-    function changeQuantity(name, delta) {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      if (delta > 0) {
-        const item = cart.find(i => i.name === name);
-        if (item) cart.push({ name: item.name, image: item.image, price: item.price });
-      } else {
-        const index = cart.findIndex(i => i.name === name);
-        if (index !== -1) cart.splice(index, 1);
-      }
-      localStorage.setItem('cart', JSON.stringify(cart));
-      loadCart();
-    }
+function changeQuantity(name, delta) {
+  let cart = JSON.parse(localStorage.getItem('cart')) || {};
+  if (cart[name]) {
+    cart[name].quantity += delta;
+    if (cart[name].quantity <= 0) delete cart[name];
+  }
+  localStorage.setItem('cart', JSON.stringify(cart));
+  loadCart();
+}
 
-    function removeItem(name) {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      cart = cart.filter(item => item.name !== name);
-      localStorage.setItem('cart', JSON.stringify(cart));
-      loadCart();
+function removeItem(name) {
+  let cart = JSON.parse(localStorage.getItem('cart')) || {};
+  delete cart[name];
+  localStorage.setItem('cart', JSON.stringify(cart));
+  loadCart();
     }
 
     window.onload = loadCart;
