--- a/cart.html
+++ b/cart.html
@@ -74,14 +74,10 @@
       color: #003366;
       margin-bottom: 1rem;
     }
-    @media (max-width: 768px) {
-  .cart-item {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+    
 
 
-  }
+  
 
   .quantity-controls {
     margin-top: 0.5rem;
@@ -202,68 +198,82 @@
   <script>
       localStorage.removeItem("orderSubmitted");
     function loadCart() {
-  const cartContainer = document.getElementById('cart-items');
-  const totalDisplay = document.getElementById('cart-total');
-  const checkoutBtn = document.getElementById('checkout-btn');
+      const cartContainer = document.getElementById('cart-items');
+      const totalDisplay = document.getElementById('cart-total');
+      const checkoutBtn = document.getElementById('checkout-btn');
 
-  let cart = JSON.parse(localStorage.getItem('cart')) || {};
-  const items = Object.values(cart);
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
-  cartContainer.innerHTML = '';
-  let grandTotal = 0;
+      const consolidated = {};
+      cart.forEach(item => {
+        if (consolidated[item.name]) {
+          consolidated[item.name].quantity++;
+        } else {
+          consolidated[item.name] = { ...item, quantity: 1 };
+        }
+      });
 
-  if (items.length === 0) {
-    cartContainer.innerHTML = '<p class="empty-message">Your cart is empty.</p>';
-    checkoutBtn.style.display = 'none';
-    totalDisplay.style.display = 'none';
-    return;
-  }
+      cart = Object.values(consolidated);
+      cartContainer.innerHTML = '';
+      let grandTotal = 0;
 
-  totalDisplay.style.display = 'block';
-  checkoutBtn.style.display = 'inline-block';
+      if (cart.length === 0) {
+        cartContainer.innerHTML = '<p class="empty-message">Your cart is empty.</p>';
+        checkoutBtn.style.display = 'none';
+        totalDisplay.style.display = 'none';
+        return;
+      }
 
-  items.forEach((item) => {
-    const itemTotal = item.price * item.quantity;
-    grandTotal += itemTotal;
+      totalDisplay.style.display = 'block';
+      checkoutBtn.style.display = 'inline-block';
 
-    const itemHTML = `
-      <div class="cart-item">
-        <img src="${item.image}" alt="${item.name}" />
-        <div class="cart-details">
-          <div><strong>${item.name}</strong></div>
-          <div class="price">₦${item.price.toLocaleString()}</div>
-          <div class="quantity-controls">
-            <button onclick="changeQuantity('${item.name}', -1)">-</button>
-            <span>${item.quantity}</span>
-            <button onclick="changeQuantity('${item.name}', 1)">+</button>
+      cart.forEach((item) => {
+        const itemTotal = item.price * item.quantity;
+        grandTotal += itemTotal;
+
+        const itemHTML = `
+          <div class="cart-item">
+            <img src="${item.image}" alt="${item.name}" />
+            <div class="cart-details">
+              <div><strong>${item.name}</strong></div>
+              <div class="price">₦${item.price.toLocaleString()}</div>
+              <div class="quantity-controls">
+                <button onclick="changeQuantity('${item.name}', -1)">-</button>
+                <span>${item.quantity}</span>
+                <button onclick="changeQuantity('${item.name}', 1)">+</button>
+              </div>
+              <div>Subtotal: ₦${itemTotal.toLocaleString()}</div>
+            </div>
+            <button class="remove-btn" onclick="removeItem('${item.name}')">Remove</button>
           </div>
-          <div>Subtotal: ₦${itemTotal.toLocaleString()}</div>
-        </div>
-        <button class="remove-btn" onclick="removeItem('${item.name}')">Remove</button>
-      </div>
-    `;
-    cartContainer.innerHTML += itemHTML;
-  });
+        `;
+        cartContainer.innerHTML += itemHTML;
+      });
 
-  totalDisplay.textContent = 'Total: ₦' + grandTotal.toLocaleString();
-}
-
-function changeQuantity(name, delta) {
-  let cart = JSON.parse(localStorage.getItem('cart')) || {};
-  if (cart[name]) {
-    cart[name].quantity += delta;
-    if (cart[name].quantity <= 0) delete cart[name];
-  }
-  localStorage.setItem('cart', JSON.stringify(cart));
-  loadCart();
-}
-
-function removeItem(name) {
-  let cart = JSON.parse(localStorage.getItem('cart')) || {};
-  delete cart[name];
-  localStorage.setItem('cart', JSON.stringify(cart));
-  loadCart();
+      totalDisplay.textContent = 'Total: ₦' + grandTotal.toLocaleString();
     }
+
+    function changeQuantity(name, delta) {
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      if (delta > 0) {
+        const item = cart.find(i => i.name === name);
+        if (item) cart.push({ name: item.name, image: item.image, price: item.price });
+      } else {
+        const index = cart.findIndex(i => i.name === name);
+        if (index !== -1) cart.splice(index, 1);
+      }
+      localStorage.setItem('cart', JSON.stringify(cart));
+      loadCart();
+    }
+
+    function removeItem(name) {
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      cart = cart.filter(item => item.name !== name);
+      localStorage.setItem('cart', JSON.stringify(cart));
+      loadCart();
+    }
+
+    window.onload = loadCart;
 
     window.onload = loadCart;
   </script>
