--- a/electric.html
+++ b/electric.html
@@ -3,36 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Electrical Appliances - SAMLECT ELECTRONICS</title>
+  <title>Electrical Appliances - Sam Rainbow Global Services</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-          <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding-top: 100px;
-      padding-bottom: 80px;
-    }
-    header, footer {
-      background: #003366;
-      color: #fff;
-      padding: 1rem 2rem;
-      position: fixed;
-      width: 100%;
-      z-index: 1000;
-    }
-   header {
+   <style>
+ /* Reset and Base */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f3f4f6;
+  color: #333;
+  line-height: 1.6;
+  padding-top: 100px;   /* leave space for fixed header */
+  padding-bottom: 80px; /* leave space for fixed footer */
+}
+
+/* Header */
+header {
+  position: fixed;
   top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  left: 0;
+  right: 0;
   background: #003366;
   color: #fff;
   padding: 1rem 2rem;
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
+  display: flex;
+  align-items: center;
   flex-wrap: wrap;
+  z-index: 1000;
 }
 
 .left-header {
@@ -42,9 +44,11 @@
 }
 
 .logo {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bold;
+  color: #fff; /* Logo white */
   margin-bottom: 0.3rem;
+  user-select: none;
 }
 
 .search-bar {
@@ -53,130 +57,190 @@
 
 .search-bar input {
   width: 100%;
-  padding: 0.3rem;
+  padding: 0.4rem 0.6rem;
   border-radius: 5px;
   border: none;
-  font-size: 0.85rem;
+  font-size: 0.9rem;
+  outline-offset: 2px;
 }
 
 .cart-button {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
   color: #fff;
   text-decoration: none;
   white-space: nowrap;
+  margin-left: auto; /* pushes cart button to right */
+  background-color: transparent;
+  border: 1.5px solid #f68b1e;
+  border-radius: 4px;
+  padding: 0.4rem 0.8rem;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  cursor: pointer;
 }
-    .cart-button i {
-      margin-right: 0.5rem;
-    }
-    footer {
-      bottom: 0;
-      text-align: center;
-      font-size: 0.9rem;
-    }
-    main {
-      max-width: 1000px;
-      margin: auto;
-      padding: 1rem;
-    }
-    .store-section {
-      background: #fff;
-      margin-bottom: 2rem;
-      border-radius: 10px;
-      padding: 2rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .store-section h2 {
-      color: #003366;
-      margin-bottom: 1rem;
-    }
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 1rem;
-      justify-items: center;
-    }
-    .product {
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .product img {
-      width: 100px;
-      border-radius: 5px;
-    }
-    .product-details {
-      margin-top: 0.5rem;
-    }
-    .price {
-      font-weight: bold;
-      color: green;
-    }
-    .add-to-cart, .qty-btn {
-      background: #003366;
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 0.5rem;
-    }
-    .cart-controls {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-    .qty {
-      min-width: 20px;
-      text-align: center;
-    }
-    .search-bar {
-      margin-top: 0.5rem;
-      width: 100%;
-    }
-    .search-bar input {
-      padding: 0.5rem;
-      width: 100%;
-      border-radius: 5px;
-      border: none;
-      font-size: 1rem;
-    }
-    footer {
-      background: #003366;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      z-index: 1000;
-      padding: 0.5rem 0;
-      box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
-    }
 
-    .footer-nav {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-    }
+.cart-button:hover {
+  background-color: #f68b1e;
+  color: #003366;
+}
 
-    .footer-nav a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: #fff;
-      text-decoration: none;
-      font-size: 0.75rem;
-    }
+.cart-button i {
+  margin-right: 0.4rem;
+}
 
-    .footer-nav i {
-      font-size: 1.2rem;
-      margin-bottom: 0.2rem;
-    }
+/* Add to Cart and Quantity Buttons */
+.add-to-cart,
+.qty-btn {
+  background: #003366;
+  color: #fff;
+  padding: 0.6rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 0.5rem;
+  transition: background-color 0.3s ease;
+}
 
-    .footer-nav a:hover {
-      color: #00ffcc;
-    }
+.add-to-cart:hover,
+.qty-btn:hover {
+  background-color: #002244;
+}
 
-          </style>
+/* Main Content */
+main {
+  max-width: 1200px;
+  margin: auto;
+  padding: 2rem 1rem;
+}
+
+.store-section {
+  background: #fff;
+  border-radius: 8px;
+  padding: 1rem;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+  margin-bottom: 2rem;
+}
+
+.store-section h2 {
+  color: #003366;
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+}
+
+/* Product Grid */
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 1rem;
+}
+
+/* Force exactly 4 columns on smaller screens */
+@media (max-width: 768px) {
+  .product-grid {
+    grid-template-columns: repeat(4, 1fr) !important;
+  }
+
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .search-bar {
+    width: 100%;
+    margin-top: 1rem;
+  }
+}
+
+/* Product Cards */
+.product {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  padding: 1rem;
+  text-align: center;
+  transition: transform 0.3s ease;
+  cursor: default;
+}
+
+.product:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+.product img {
+  width: 100%;
+  max-height: 160px;
+  object-fit: contain;
+  margin-bottom: 0.75rem;
+}
+
+.product-details {
+  margin-top: 0.5rem;
+}
+
+.price {
+  font-weight: bold;
+  color: #003366;
+  font-size: 1.1rem;
+}
+
+.cart-controls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.qty {
+  min-width: 30px;
+  text-align: center;
+}
+
+/* Footer */
+footer {
+  background: #003366;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1000;
+  padding: 0.6rem 2rem;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
+  overflow: hidden;
+  color: #fff;
+  font-size: 0.9rem;
+  text-align: center;
+}
+
+.footer-nav {
+  display: flex;
+  justify-content: space-around;
+  gap: auto;
+  align-items: center;
+}
+
+.footer-nav a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  font-size: 0.75rem;
+  transition: color 0.3s ease;
+}
+
+.footer-nav i {
+  font-size: 1.2rem;
+  margin-bottom: 0.2rem;
+}
+
+.footer-nav a:hover {
+  color: #00ffcc;
+}
+</style>
+  
   
 </head>
 <body>
