--- a/store.html
+++ b/store.html
@@ -6,125 +6,269 @@
   <title>Store - SAMLECT ELECTRONICS</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
-    /* [Same styles as before, unchanged] */
-    /* ... Keep all your CSS as provided above ... */
+    /* Reset and Base */
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      padding-bottom: 60px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f3f4f6;
+      color: #333;
+      line-height: 1.6;
+      padding-top: 100px;   /* space for fixed header */
+      padding-bottom: 80px; /* space for fixed footer */
     }
+
+    /* Header */
     header {
-      background-color:  #003366;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: #003366;
       color: #fff;
-      padding: 15px;
-      text-align: center;
-      position: relative;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      z-index: 1000;
     }
+
     .logo {
-      font-size: 24px;
+      font-size: 1.4rem;
       font-weight: bold;
+      color: #fff;
+      user-select: none;
     }
-    .cart-button {
-      position: absolute;
-      right: 20px;
-      top: 16px;
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-    }
+
     .search-container {
-      margin-top: 10px;
-    }
-    .search-container input {
-      padding: 8px;
-      width: 80%;
+      margin-left: 2rem;
+      flex-grow: 1;
       max-width: 400px;
     }
+
+    .search-container input {
+      width: 100%;
+      padding: 0.4rem 0.6rem;
+      border-radius: 5px;
+      border: none;
+      font-size: 0.9rem;
+      outline-offset: 2px;
+    }
+
+    .cart-button {
+      font-size: 0.95rem;
+      color: #fff;
+      text-decoration: none;
+      white-space: nowrap;
+      margin-left: auto; /* pushes cart button right */
+      background-color: transparent;
+      border: 1.5px solid #f68b1e;
+      border-radius: 4px;
+      padding: 0.4rem 0.8rem;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      cursor: pointer;
+    }
+
+    .cart-button:hover {
+      background-color: #f68b1e;
+      color: #003366;
+    }
+
+    .cart-button i {
+      margin-right: 0.4rem;
+    }
+
+    /* Main Content */
     main {
-      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+      padding: 2rem 1rem;
     }
+
     .store-section {
-      margin-bottom: 40px;
+      background: #fff;
+      border-radius: 8px;
+      padding: 1rem;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+      margin-bottom: 2rem;
     }
+
     .store-section h2 {
-      margin-bottom: 15px;
+      color: #003366;
+      font-size: 1.6rem;
+      margin-bottom: 1rem;
     }
+
+    /* Preserve your horizontal scroll container */
     .product-container {
       display: flex;
       overflow-x: auto;
-      gap: 20px;
+      gap: 1rem;
+      padding-bottom: 0.5rem;
+      -webkit-overflow-scrolling: touch;
     }
+
+    /* Product Cards */
     .product {
-      background-color: #fff;
-      border: 1px solid #ddd;
-      padding: 10px;
-      border-radius: 5px;
-      min-width: 200px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      padding: 1rem;
       text-align: center;
+      transition: transform 0.3s ease;
+      min-width: 200px;
+      cursor: default;
     }
+
+    .product:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    }
+
     .product img {
       width: 100%;
-      height: 150px;
-      object-fit: cover;
-      margin-bottom: 10px;
+      max-height: 160px;
+      object-fit: contain;
+      margin-bottom: 0.75rem;
     }
+
+    .product-details {
+      margin-top: 0.5rem;
+    }
+
     .price {
-      color: #4CAF50;
       font-weight: bold;
-      margin-top: 5px;
+      color: #003366;
+      font-size: 1.1rem;
     }
-    .controls button {
-      padding: 5px 10px;
-      margin-top: 10px;
-      background-color: #4CAF50;
-      color: white;
+
+    .controls {
+      margin-top: 0.5rem;
+    }
+
+    .add-to-cart,
+    .qty-btn {
+      background: #003366;
+      color: #fff;
+      padding: 0.6rem 1rem;
       border: none;
-      border-radius: 3px;
+      border-radius: 4px;
       cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
+
+    .add-to-cart:hover,
+    .qty-btn:hover {
+      background-color: #002244;
+    }
+
     .quantity-control button {
-      padding: 3px 8px;
+      padding: 0.3rem 0.8rem;
+      margin: 0 0.25rem;
+      background: #003366;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
+
+    .quantity-control button:hover {
+      background-color: #002244;
+    }
+
+    .quantity-control span {
+      min-width: 25px;
+      display: inline-block;
+      text-align: center;
+      font-weight: bold;
+      color: #003366;
+    }
+
     .explore-more {
       display: inline-block;
       margin-top: 10px;
       text-decoration: none;
-      color: #4CAF50;
+      color: #f68b1e;
       font-weight: bold;
+      transition: color 0.3s ease;
     }
+
+    .explore-more:hover {
+      color: #d87600;
+    }
+
+    /* Footer */
     footer {
+      background: #003366;
       position: fixed;
       bottom: 0;
+      left: 0;
+      right: 0;
       width: 100%;
-      background-color:  #003366;
-      color: white;
-      padding: 10px 0;
+      z-index: 1000;
+      padding: 0.6rem 2rem;
+      box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
+      overflow: hidden;
+      color: #fff;
+      font-size: 0.9rem;
       text-align: center;
     }
+
+    .footer-nav {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+
     .footer-nav a {
-      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #fff;
       text-decoration: none;
-      margin: 0 10px;
+      font-size: 0.75rem;
+      transition: color 0.3s ease;
+    }
+
+    .footer-nav i {
+      font-size: 1.2rem;
+      margin-bottom: 0.2rem;
+    }
+
+    .footer-nav a:hover {
+      color: #00ffcc;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .search-container {
+        width: 100%;
+        margin: 0.5rem 0 0 0;
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">Sam Rainbow Global Services Ltd</div>
-    <a href="cart.html" class="cart-button" id="cart-info">
-      <i class="fas fa-shopping-cart"></i>Cart (0 items - ₦0)
-    </a>
     <div class="search-container">
       <input type="text" id="searchInput" placeholder="Search products..." oninput="searchProducts()" />
     </div>
+    <a href="cart.html" class="cart-button" id="cart-info">
+      <i class="fas fa-shopping-cart"></i>Cart (0 items - ₦0)
+    </a>
   </header>
 
   <main>
@@ -220,75 +364,211 @@
   </footer>
 
   <script>
-    function addToCart(button, productName, productImage, price) {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      let product = cart.find(item => item.name === productName);
+  // Add product to cart or increase quantity if already in cart
+  function addToCart(button, productName, productImage, price) {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    let product = cart.find(item => item.name === productName);
 
-      if (product) {
-        product.quantity += 1;
-      } else {
-        cart.push({ name: productName, image: productImage, price: price, quantity: 1 });
-      }
+    if (product) {
+      product.quantity += 1;
+    } else {
+      cart.push({ name: productName, image: productImage, price: price, quantity: 1 });
+    }
 
-      localStorage.setItem('cart', JSON.stringify(cart));
-      updateCartDisplay();
+    localStorage.setItem('cart', JSON.stringify(cart));
+    updateCartDisplay();
 
+    // Replace Add to Cart button with quantity controls
+    const controlsDiv = button.closest('.controls');
+    if (controlsDiv) {
+      controlsDiv.innerHTML = `
+        <div class="quantity-control">
+          <button onclick="changeQuantity('${productName}', -1, this)">-</button>
+          <span id="qty-${productName.replace(/\s/g, '')}">${product ? product.quantity : 1}</span>
+          <button onclick="changeQuantity('${productName}', 1, this)">+</button>
+        </div>
+      `;
+    }
+  }
+
+  // Change quantity of a product in cart
+  function changeQuantity(productName, delta, button) {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    let product = cart.find(item => item.name === productName);
+    if (!product) return;
+
+    product.quantity += delta;
+
+    if (product.quantity <= 0) {
+      // Remove product from cart
+      cart = cart.filter(item => item.name !== productName);
+
+      // Reset controls to Add to Cart button
       const controlsDiv = button.closest('.controls');
       if (controlsDiv) {
         controlsDiv.innerHTML = `
-          <div class="quantity-control">
-            <button onclick="changeQuantity('${productName}', -1, this)">-</button>
-            <span id="qty-${productName.replace(/\s/g, '')}">${product ? product.quantity : 1}</span>
-            <button onclick="changeQuantity('${productName}', 1, this)">+</button>
-          </div>
+          <button class="add-to-cart" onclick="addToCart(this, '${productName}', '${product.image}', ${product.price})">Add to Cart</button>
         `;
       }
+    } else {
+      // Update quantity display
+      const qtySpan = document.getElementById(`qty-${productName.replace(/\s/g, '')}`);
+      if (qtySpan) qtySpan.textContent = product.quantity;
     }
 
-    function changeQuantity(productName, delta, btn) {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      let product = cart.find(item => item.name === productName);
+    localStorage.setItem('cart', JSON.stringify(cart));
+    updateCartDisplay();
+  }
 
-      if (!product) return;
+  // Update the cart summary display in header
+  function updateCartDisplay() {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    let totalItems = cart.reduce((sum, item) => sum + item.quantity, 0);
+    let totalPrice = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
 
-      product.quantity += delta;
-      if (product.quantity <= 0) {
-        cart = cart.filter(item => item.name !== productName);
-        const productDiv = btn.closest('.product');
-        const controlsDiv = productDiv.querySelector('.controls');
-        if (controlsDiv) {
-          controlsDiv.innerHTML = `<button class="add-to-cart" onclick="addToCart(this, '${productName}', '${product.image}', ${product.price})">Add to Cart</button>`;
-        }
-      } else {
-        const qtySpan = document.getElementById(`qty-${productName.replace(/\s/g, '')}`);
-        if (qtySpan) qtySpan.textContent = product.quantity;
-      }
-
-      localStorage.setItem('cart', JSON.stringify(cart));
-      updateCartDisplay();
+    const cartInfo = document.getElementById('cart-info');
+    if (cartInfo) {
+      cartInfo.innerHTML = `<i class="fas fa-shopping-cart"></i>Cart (${totalItems} item${totalItems !== 1 ? 's' : ''} - ₦${totalPrice.toLocaleString()})`;
     }
+  }
 
-    function updateCartDisplay() {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      let totalItems = cart.reduce((sum, item) => sum + item.quantity, 0);
-      let totalPrice = cart.reduce((sum, item) => sum + item.quantity * item.price, 0);
-      document.getElementById('cart-info').innerHTML =
-        `<i class="fas fa-shopping-cart"></i>Cart (${totalItems} items - ₦${totalPrice.toLocaleString()})`;
-    }
+  // Filter products on search input
+  function searchProducts() {
+    const input = document.getElementById('searchInput').value.toLowerCase();
 
-    function searchProducts() {
-      const input = document.getElementById('searchInput').value.toLowerCase();
-      const allProducts = document.querySelectorAll('.product');
-
-      allProducts.forEach(product => {
-        const text = product.textContent.toLowerCase();
-        product.style.display = text.includes(input) ? '' : 'none';
-      });
-    }
-
-    window.addEventListener('load', () => {
-      updateCartDisplay();
+    const allProducts = document.querySelectorAll('.product');
+    allProducts.forEach(product => {
+      const productName = product.querySelector('.product-details div:first-child').textContent.toLowerCase();
+      product.style.display = productName.includes(input) ? '' : 'none';
     });
-  </script>
-</body>
-</html>
+  }
+
+  // On page load, restore cart quantities and update display
+  document.addEventListener('DOMContentLoaded', () => {
+    updateCartDisplay();
+
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    cart.forEach(item => {
+      const allProducts = document.querySelectorAll('.product');
+      allProducts.forEach(productCard => {
+        const productName = productCard.querySelector('.product-details div:first-child').textContent;
+        if (productName === item.name) {
+          const controlsDiv = productCard.querySelector('.controls');
+          if (controlsDiv) {
+            controlsDiv.innerHTML = `
+              <div class="quantity-control">
+                <button onclick="changeQuantity('${item.name}', -1, this)">-</button>
+                <span id="qty-${item.name.replace(/\s/g, '')}">${item.quantity}</span>
+                <button onclick="changeQuantity('${item.name}', 1, this)">+</button>
+              </div>
+            `;
+          }
+        }
+      });
+    });
+  });
+</script><script>
+  // Add product to cart or increase quantity if already in cart
+  function addToCart(button, productName, productImage, price) {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    let product = cart.find(item => item.name === productName);
+
+    if (product) {
+      product.quantity += 1;
+    } else {
+      cart.push({ name: productName, image: productImage, price: price, quantity: 1 });
+    }
+
+    localStorage.setItem('cart', JSON.stringify(cart));
+    updateCartDisplay();
+
+    // Replace Add to Cart button with quantity controls
+    const controlsDiv = button.closest('.controls');
+    if (controlsDiv) {
+      controlsDiv.innerHTML = `
+        <div class="quantity-control">
+          <button onclick="changeQuantity('${productName}', -1, this)">-</button>
+          <span id="qty-${productName.replace(/\s/g, '')}">${product ? product.quantity : 1}</span>
+          <button onclick="changeQuantity('${productName}', 1, this)">+</button>
+        </div>
+      `;
+    }
+  }
+
+  // Change quantity of a product in cart
+  function changeQuantity(productName, delta, button) {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    let product = cart.find(item => item.name === productName);
+    if (!product) return;
+
+    product.quantity += delta;
+
+    if (product.quantity <= 0) {
+      // Remove product from cart
+      cart = cart.filter(item => item.name !== productName);
+
+      // Reset controls to Add to Cart button
+      const controlsDiv = button.closest('.controls');
+      if (controlsDiv) {
+        controlsDiv.innerHTML = `
+          <button class="add-to-cart" onclick="addToCart(this, '${productName}', '${product.image}', ${product.price})">Add to Cart</button>
+        `;
+      }
+    } else {
+      // Update quantity display
+      const qtySpan = document.getElementById(`qty-${productName.replace(/\s/g, '')}`);
+      if (qtySpan) qtySpan.textContent = product.quantity;
+    }
+
+    localStorage.setItem('cart', JSON.stringify(cart));
+    updateCartDisplay();
+  }
+
+  // Update the cart summary display in header
+  function updateCartDisplay() {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    let totalItems = cart.reduce((sum, item) => sum + item.quantity, 0);
+    let totalPrice = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
+
+    const cartInfo = document.getElementById('cart-info');
+    if (cartInfo) {
+      cartInfo.innerHTML = `<i class="fas fa-shopping-cart"></i>Cart (${totalItems} item${totalItems !== 1 ? 's' : ''} - ₦${totalPrice.toLocaleString()})`;
+    }
+  }
+
+  // Filter products on search input
+  function searchProducts() {
+    const input = document.getElementById('searchInput').value.toLowerCase();
+
+    const allProducts = document.querySelectorAll('.product');
+    allProducts.forEach(product => {
+      const productName = product.querySelector('.product-details div:first-child').textContent.toLowerCase();
+      product.style.display = productName.includes(input) ? '' : 'none';
+    });
+  }
+
+  // On page load, restore cart quantities and update display
+  document.addEventListener('DOMContentLoaded', () => {
+    updateCartDisplay();
+
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    cart.forEach(item => {
+      const allProducts = document.querySelectorAll('.product');
+      allProducts.forEach(productCard => {
+        const productName = productCard.querySelector('.product-details div:first-child').textContent;
+        if (productName === item.name) {
+          const controlsDiv = productCard.querySelector('.controls');
+          if (controlsDiv) {
+            controlsDiv.innerHTML = `
+              <div class="quantity-control">
+                <button onclick="changeQuantity('${item.name}', -1, this)">-</button>
+                <span id="qty-${item.name.replace(/\s/g, '')}">${item.quantity}</span>
+                <button onclick="changeQuantity('${item.name}', 1, this)">+</button>
+              </div>
+            `;
+          }
+        }
+      });
+    });
+  });
+</script>
