--- a/electric.html
+++ b/electric.html
@@ -314,92 +314,83 @@ footer {
       <button class="add-to-cart" onclick="addToCart(this, '10W church bulb', 'https://via.placeholder.com/100', 950)">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="10W colored bulb (rooms)">
-      <img src="https://via.placeholder.com/100" alt="10W colored bulb">
-      <div class="product-details"><div>10W colored bulb</div><div class="price">₦900</div></div>
-      <button class="add-to-cart" onclick="addToCart(this, '10W colored bulb', 'https://via.placeholder.com/100', 900)">Add to Cart</button>
-    </div>
-
+ 
     <div class="product" data-name="5W colored bulb">
-      <img src="https://via.placeholder.com/100" alt="5W colored bulb">
+      <img src="https://image.made-in-china.com/202f0j00gVLGAsftuTqa/New-3W-5W-7W-9W-A60-E27-B22-Color-LED-Light-Bulb-Red-Blue-Green-Yellow-White-Colour-for-Festival-Christmas-Decorative.webp" alt="5W colored bulb">
       <div class="product-details"><div>5W colored bulb</div><div class="price">₦700</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '5W colored bulb', 'https://via.placeholder.com/100', 700)">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="Doll 40mm bulb">
-      <img src="https://via.placeholder.com/100" alt="Doll 40mm bulb">
-      <div class="product-details"><div>Doll 40mm bulb</div><div class="price">₦850</div></div>
-      <button class="add-to-cart" onclick="addToCart(this, 'Doll 40mm bulb', 'https://via.placeholder.com/100', 850)">Add to Cart</button>
-    </div>
+    
 
-    <div class="product" data-name="18W Vornax bulb">
-      <img src="https://via.placeholder.com/100" alt="18W Vornax bulb">
+    <div class="product" data-name="18W Vormax bulb">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQL1NW8Z17HBLy7Si5y6O6J2eGRhVfneKo02wlnUURVnYQ3KDMw4vT6uoo&s=10" alt="18W Vornax bulb">
       <div class="product-details"><div>18W Vornax bulb</div><div class="price">₦1,200</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '18W Vornax bulb', 'https://via.placeholder.com/100', 1200)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="30W anti-power bulb">
-      <img src="https://via.placeholder.com/100" alt="30W anti-power bulb">
-      <div class="product-details"><div>30W anti-power bulb</div><div class="price">₦1,800</div></div>
+      <img src="https://image.made-in-china.com/202f0j00YKmtGkbUZqcO/B22-26W-Lotus-Energy-Saving-Bulb.webp" alt="30W anti-power bulb">
+      <div class="product-details"><div>26w delta power bulb</div><div class="price">₦1,800</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '30W anti-power bulb', 'https://via.placeholder.com/100', 1800)">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="15W Goofcom bulb">
-      <img src="https://via.placeholder.com/100" alt="15W Goofcom bulb">
+    <div class="product" data-name="15W Goodcom bulb">
+      <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/22/7373251/1.jpg?0015" alt="15W Goofcom bulb">
       <div class="product-details"><div>15W Goofcom bulb</div><div class="price">₦1,100</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '15W Goofcom bulb', 'https://via.placeholder.com/100', 1100)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="60W Pals bulb">
-      <img src="https://via.placeholder.com/100" alt="60W Pals bulb">
-      <div class="product-details"><div>60W Pals bulb</div><div class="price">₦1,600</div></div>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvs0DfogvAvPVA3Ta5yOSz2SWdNQlfX2NUEQ&s" alt="60W Pals bulb">
+      <div class="product-details"><div>60W Pila bulb</div><div class="price">₦1,600</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '60W Pals bulb', 'https://via.placeholder.com/100', 1600)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="Digital indicator bulb">
-      <img src="https://via.placeholder.com/100" alt="Digital indicator bulb">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyg0se14goiMhmG1o06LiWm5jtn7WKX4Jr8g&usqp=CAU" alt="Digital indicator bulb">
       <div class="product-details"><div>Digital indicator bulb</div><div class="price">₦1,300</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'Digital indicator bulb', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="6W surface AKT">
-      <img src="https://via.placeholder.com/100" alt="6W surface AKT">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYREM3oBYzkpucp4fM205mXuCIJxdyU1qTSrAVbc67d6xvmv0HJqst8c8l&s=10" alt="6W surface AKT">
       <div class="product-details"><div>6W surface AKT</div><div class="price">₦850</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '6W surface AKT', 'https://via.placeholder.com/100', 850)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="5W pop AKT">
-      <img src="https://via.placeholder.com/100" alt="5W pop AKT">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJLXtyYMOdcHujrkABRKxu9S3HA7mYlOMGyg&s" alt="5W pop AKT">
       <div class="product-details"><div>5W pop AKT</div><div class="price">₦750</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '5W pop AKT', 'https://via.placeholder.com/100', 750)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="3W pop AKT">
-      <img src="https://via.placeholder.com/100" alt="3W pop AKT">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTIuqEZplMHsnfhuf3zAk5sPSJe5UVQ3Y6Yw&s" alt="3W pop AKT">
       <div class="product-details"><div>3W pop AKT</div><div class="price">₦700</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '3W pop AKT', 'https://via.placeholder.com/100', 700)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="Mundo bulb">
-      <img src="https://via.placeholder.com/100" alt="Mundo bulb">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtwq7le1kBvn3vtaJrfiSpLIF5eA_etmAvLw&s" alt="Mundo bulb">
       <div class="product-details"><div>Mundo bulb</div><div class="price">₦1,000</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'Mundo bulb', 'https://via.placeholder.com/100', 1000)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="12W pop 2-in-1 color">
-      <img src="https://via.placeholder.com/100" alt="12W pop 2-in-1 color">
+      <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/27/052458/1.jpg?1199" alt="12W pop 2-in-1 color">
       <div class="product-details"><div>12W pop 2-in-1 color</div><div class="price">₦1,300</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '12W pop 2-in-1 color', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="26W SVL bulb">
-      <img src="https://via.placeholder.com/100" alt="26W SVL bulb">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-Yh97_kB70HOvc3f4egX5Lkb5lKt0FSZipH7uBzV7FWunciOCrHcDtQA&s=10" alt="26W SVL bulb">
       <div class="product-details"><div>26W SVL bulb</div><div class="price">₦1,400</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '26W SVL bulb', 'https://via.placeholder.com/100', 1400)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="8W SVL bulb">
-      <img src="https://via.placeholder.com/100" alt="8W SVL bulb">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLlCvzzq-AbypbEJRH9cObZu-uB05QyxRHfQ&s" alt="8W SVL bulb">
       <div class="product-details"><div>8W SVL bulb</div><div class="price">₦850</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '8W SVL bulb', 'https://via.placeholder.com/100', 850)">Add to Cart</button>
     </div>
