--- a/electric.html
+++ b/electric.html
@@ -426,9 +426,9 @@ footer {
   <h2>Boxes & Fittings</h2>
   <div class="product-grid">
     <div class="product" data-name="T-box">
-      <img src="https://via.placeholder.com/100" alt="T-box">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9lGdjcLQ4I8WVBfKqa3XFLHQbnjs672OrNSnaL6Zsmw&s" alt="T-box">
       <div class="product-details">
-        <div>T-box</div>
+        <div>20mm T-box</div>
         <div class="price">₦500</div>
       </div>
       <button class="add-to-cart" onclick="addToCart(this, 'T-box', 'https://via.placeholder.com/100', 500)">Add to Cart</button>
