--- a/electric.html
+++ b/electric.html
@@ -434,15 +434,15 @@ footer {
       <button class="add-to-cart" onclick="addToCart(this, 'T-box', 'https://via.placeholder.com/100', 500)">Add to Cart</button>
     </div>
     <div class="product" data-name="Tee box">
-      <img src="https://via.placeholder.com/100" alt="Tee box">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9lGdjcLQ4I8WVBfKqa3XFLHQbnjs672OrNSnaL6Zsmw&s" alt="Tee box">
       <div class="product-details">
-        <div>Tee box</div>
+        <div>25mm Tee box</div>
         <div class="price">₦600</div>
       </div>
       <button class="add-to-cart" onclick="addToCart(this, 'Tee box', 'https://via.placeholder.com/100', 600)">Add to Cart</button>
     </div>
     <div class="product" data-name="Through box">
-      <img src="https://via.placeholder.com/100" alt="Through box">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTdLc_8gftDv_BHeOnmrGd5_qjnVAcuUQJJ8B1D9sqOg&s" alt="Through box">
       <div class="product-details">
         <div>Through box</div>
         <div class="price">₦550</div>
@@ -450,7 +450,7 @@ footer {
       <button class="add-to-cart" onclick="addToCart(this, 'Through box', 'https://via.placeholder.com/100', 550)">Add to Cart</button>
     </div>
     <div class="product" data-name="Loop-in box">
-      <img src="https://via.placeholder.com/100" alt="Loop-in box">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiXsZRced8DskclltVSMKsnXJrAgFOqUGyMD_6a8E-GQ&s" alt="Loop-in box">
       <div class="product-details">
         <div>Loop-in box</div>
         <div class="price">₦580</div>
@@ -458,7 +458,7 @@ footer {
       <button class="add-to-cart" onclick="addToCart(this, 'Loop-in box', 'https://via.placeholder.com/100', 580)">Add to Cart</button>
     </div>
     <div class="product" data-name="4-way loop-in box">
-      <img src="https://via.placeholder.com/100" alt="4-way loop-in box">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTigxx15aCOWeNUNh1QT4oVKYxdaV_sT7BOke64YxKWJOHZFct4KB8Hyfg&s=10" alt="4-way loop-in box">
       <div class="product-details">
         <div>4-way loop-in box</div>
         <div class="price">₦700</div>
@@ -492,7 +492,7 @@ footer {
     <div class="product" data-name="Function box">
       <img src="https://via.placeholder.com/100" alt="Function box">
       <div class="product-details">
-        <div>Function box</div>
+        <div>junction box</div>
         <div class="price">₦650</div>
       </div>
       <button class="add-to-cart" onclick="addToCart(this, 'Function box', 'https://via.placeholder.com/100', 650)">Add to Cart</button>
