--- a/electric.html
+++ b/electric.html
@@ -931,25 +931,25 @@ footer {
     </div>
 
     <div class="product" data-name="45µF capacitor">
-      <img src="images/capacitors/45uf-capacitor.jpg" alt="45µF capacitor">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtKMPS6gDwWIYYu4O0Rq7vWC0JKEDjBm8svO-5o_-vGdHdWi3Qq-7V4AM&s" alt="45µF capacitor">
       <div class="product-details"><div>45µF capacitor</div><div class="price">₦2,800</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '45µF capacitor', 'images/capacitors/45uf-capacitor.jpg', 2800)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="40µF capacitor">
-      <img src="images/capacitors/40uf-capacitor.jpg" alt="40µF capacitor">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3AFi2mjXZeVdlS38Cf05xCvjv6bvprmBw_adKHgkY0A&s" alt="40µF capacitor">
       <div class="product-details"><div>40µF capacitor</div><div class="price">₦2,500</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '40µF capacitor', 'images/capacitors/40uf-capacitor.jpg', 2500)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="35µF capacitor">
-      <img src="images/capacitors/35uf-capacitor.jpg" alt="35µF capacitor">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVJuvNxTg1ufDQ1K-_CIBL7n1LdUn7Zr6o6rpbF9vcEA&s" alt="35µF capacitor">
       <div class="product-details"><div>35µF capacitor</div><div class="price">₦2,200</div></div>
       <button class="add-to-cart" onclick="addToCart(this, '35µF capacitor', 'images/capacitors/35uf-capacitor.jpg', 2200)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="RAB choke">
-      <img src="images/capacitors/rab-choke.jpg" alt="RAB choke">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjtEE9pIIFRd0QcgWU_yEgfpXgKmh4n5yXwg&s" alt="RAB choke">
       <div class="product-details"><div>RAB choke</div><div class="price">₦1,000</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'RAB choke', 'images/capacitors/rab-choke.jpg', 1000)">Add to Cart</button>
     </div>
@@ -961,25 +961,25 @@ footer {
   <div class="product-grid">
 
     <div class="product" data-name="Original tester">
-      <img src="images/tools/original-tester.jpg" alt="Original tester">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVXOqIE3sHx6av9D9XULw45Vxo1xnasYpbp1nL9a2-WQ&s" alt="Original tester">
       <div class="product-details"><div>Original tester</div><div class="price">₦3,500</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'Original tester', 'images/tools/original-tester.jpg', 3500)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="Screwdriver">
-      <img src="images/tools/screwdriver.jpg" alt="Screwdriver">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSc_Gwh7buwreR1v_JgdOS_d6UtP8DD-QQKFqg4YxDOZg&s" alt="Screwdriver">
       <div class="product-details"><div>Screwdriver</div><div class="price">₦800</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'Screwdriver', 'images/tools/screwdriver.jpg', 800)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="Small tester (Memi No. 73)">
-      <img src="images/tools/small-tester-memi73.jpg" alt="Small tester (Memi No. 73)">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS47OfPmmiPD1N3Pd-LmqpPwkD0CGNXZsqh6db93c5OVQ&s" alt="Small tester (Memi No. 73)">
       <div class="product-details"><div>Small tester (Memi No. 73)</div><div class="price">₦2,000</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'Small tester (Memi No. 73)', 'images/tools/small-tester-memi73.jpg', 2000)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="Small tester (DHX)">
-      <img src="images/tools/small-tester-dhx.jpg" alt="Small tester (DHX)">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlL9Qi-y89bQVw1apR43rVrhMNmrmJSldHWmr9frwjjw&s" alt="Small tester (DHX)">
       <div class="product-details"><div>Small tester (DHX)</div><div class="price">₦2,000</div></div>
       <button class="add-to-cart" onclick="addToCart(this, 'Small tester (DHX)', 'images/tools/small-tester-dhx.jpg', 2000)">Add to Cart</button>
     </div>
