--- a/store.html
+++ b/store.html
@@ -290,23 +290,19 @@
 
     <section class="store-section">
       <h2>Solar Systems</h2>
-      <div class="product-container" id="solar-products">
-        <div class="product">
-          <img src="https://via.placeholder.com/200" alt="Solar Panel">
-          <div class="product-details">
-            <div>200W Solar Panel</div>
-            <div class="price">₦45,000</div>
-          </div>
+<div class="product" data-name="Digital indicator bulb">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyg0se14goiMhmG1o06LiWm5jtn7WKX4Jr8g&usqp=CAU" alt="Digital indicator bulb">
+      <div class="product-details"><div>Digital indicator bulb</div><div class="price">₦1,300</div></div>
+  </div>
+
           <div class="controls">
             <button class="add-to-cart" onclick="addToCart(this, '200W Solar Panel', 'https://via.placeholder.com/200', 45000)">Add to Cart</button>
           </div>
         </div>
-        <div class="product">
-          <img src="https://via.placeholder.com/200" alt="Solar Battery">
-          <div class="product-details">
-            <div>12V Solar Battery</div>
-            <div class="price">₦85,000</div>
-          </div>
+            <div class="product" data-name="12W pop 2-in-1 color">
+      <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/27/052458/1.jpg?1199" alt="12W pop 2-in-1 color">
+      <div class="product-details"><div>12W pop 2-in-1 color</div><div class="price">₦1,300</div></div>
+   </div>
           <div class="controls">
             <button class="add-to-cart" onclick="addToCart(this, '12V Solar Battery', 'https://via.placeholder.com/200', 85000)">Add to Cart</button>
           </div>
