--- a/store.html
+++ b/store.html
@@ -287,11 +287,9 @@
 </div></div><a class="explore-more" href="electric.html">Explore More</a>
 </section>
 <section class="store-section">
-<h2>houselighting</h2>
+<h2>Houselighting</h2>
 
-<div class="controls">
-<button class="add-to-cart" onclick="addToCart(this, '200W Solar Panel', 'https://via.placeholder.com/200', 45000)">Add to Cart</button>
-</div>
+0
 
 
 <div class="controls">
@@ -305,7 +303,7 @@
 </div><div class="product" data-name="12W pop 2-in-1 color">
 <img alt="12W pop 2-in-1 color" src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/27/052458/1.jpg?1199"/>
 <div class="product-details"><div>12W pop 2-in-1 color</div><div class="price">₦1,300</div></div>
-</div></div><a class="explore-more" href="solar.html">Explore More</a>
+</div></div><a class="explore-more" href="electric.html">Explore More</a>
 </section>
 <section class="store-section">
 <h2>ELECTRICAL EQUIPMENT</h2>
