--- a/store.html
+++ b/store.html
@@ -296,11 +296,18 @@
 
 <div class="product-container"><div class="product" data-name="Digital indicator bulb">
 <img alt="Digital indicator bulb" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyg0se14goiMhmG1o06LiWm5jtn7WKX4Jr8g&amp;usqp=CAU"/>
-<div class="product-details"><div>Digital indicator bulb</div><div class="price">₦1,300</div></div>
+<div class="product-details"><div>Digital indicator bulb</div><div class="price">₦1,300</div>
+<button class="add-to-cart" onclick="addToCart(this, '20W AKT bulb', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
+
+</div>
+    
 </div><div class="product" data-name="12W pop 2-in-1 color">
 <img alt="12W pop 2-in-1 color" src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/27/052458/1.jpg?1199"/>
 <div class="product-details"><div>12W pop 2-in-1 color</div><div class="price">₦1,300</div></div>
-</div></div><a class="explore-more" href="electric.html">Explore More</a>
+</div>
+    <button class="add-to-cart" onclick="addToCart(this, '20W AKT bulb', 'https://via.placeholder.com/100', 1300)">Add to Cart</button>
+
+    </div><a class="explore-more" href="electric.html">Explore More</a>
 </section>
 <section class="store-section">
 <h2>ELECTRICAL EQUIPMENT</h2>
